🐞 fix(envfile): delete comments on the same line

--- a/.env.example
+++ b/.env.example
@@ -1,42 +1,42 @@
 # Getpay
 DEBUG=1
-JWT_SECRET_KEY='xxx' # required
-NOTIFICATION_URL= # optional (but, recommended)
+JWT_SECRET_KEY=
+NOTIFICATION_URL=
 
 # Sentry
-SENTRY_DSN= # optional
+SENTRY_DSN=
 
 # SAQ Queue
 Q1_DB=1
 
 # MongoDB
-MONGODB_ROOT_USER=xxx # required for mongodb service
-MONGODB_ROOT_PASSWORD=xxx # required for mongodb service
-MONGODB_USERNAME=xxx # required
-MONGODB_PASSWORD=xxx # required
-MONGODB_DATABASE=xxx # required
-MONGODB_HOST=localhost # required
-MONGODB_PORT=27017 # required
+MONGODB_ROOT_USER=
+MONGODB_ROOT_PASSWORD=
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DATABASE=
+MONGODB_HOST=localhost
+MONGODB_PORT=27017
 
 # Redis
-REDIS_HOST=localhost # required
-REDIS_PORT=6379 # required
-REDIS_USERNAME= # optional
-REDIS_PASSWORD= # optional
-REDIS_DATABASE=0 # required
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
+REDIS_DATABASE=0
 
 # IPaymu
-IPAYMU_URL=https://sandbox.ipaymu.com # required
-IPAYMU_VIRTUAL_ACCOUNT=xxx # required
-IPAYMU_API_KEY=xxx # required
-IPAYMU_CALLBACK_URL=http://domain.com/callback/ipaymu # required
+IPAYMU_URL=https://sandbox.ipaymu.com
+IPAYMU_VIRTUAL_ACCOUNT=
+IPAYMU_API_KEY=
+IPAYMU_CALLBACK_URL=http://domain.com/callback/ipaymu
 
 # Xendit
-XENDIT_API_KEY=xxx # required
-XENDIT_SECRET_KEY=xxx # required
-XENDIT_QRCODE_CALLBACK_URL=http://domain.com/callback/xendit/qr # required
+XENDIT_API_KEY=
+XENDIT_SECRET_KEY=
+XENDIT_QRCODE_CALLBACK_URL=http://domain.com/callback/xendit/qr
 
 # Duitku
-DUITKU_URL=https://sandbox.duitku.com # required
-DUITKU_API_KEY=xxx # required
-DUITKU_MERCHANT_CODE=xxx # required
+DUITKU_URL=https://sandbox.duitku.com
+DUITKU_API_KEY=
+DUITKU_MERCHANT_CODE=
